Tue Jun 10 12:51:27 2003  Jonathan Blandford  <jrb@redhat.com>

	* schemas/desktop_gnome_accessibility_startup.schemas.in: Patch
	from Bill Haneman <bill.haneman@sun.com> to add at_start support.

2003-06-10  Jody Goldberg <jody@gnome.org>

	* schemas/desktop_gnome_url_handlers.schemas.in : we still need
	  ghelp, info, and man to keep the help system working.

2003-05-26  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c: Merge fix for
	bug #113660.

2003-05-16  Telsa Gwynne <hobbit@aloss.ukuu.org.uk>

	* configure.in: Added cy to ALL_LINGUAS

2003-05-12  Hidetoshi Tajima <hidetoshi.tajima@sun.com>

	* libgnome/gnome-init.c (libgnome_module_info_get): 
	call bindtextdomain and bind_textdomain_codeset() earlier
	than the current, fixing bug #99224.
	
2003-05-09  Samúel Jón Gunnarsson  <sammi@techattack.nu>

	* configure.in: Added "is" into ALL_LINGUAS

Thu May  8 18:31:02 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* help-converters/info/main.c (file_exists): make it compile on
	C89 compilers.

2003-05-08  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* configure.in: call AC_LIBTOOL_WIN32_DLL which is necessary for
	building shared library on win32 platform.

	* libgnome/Makefile.am (libgnome_2_la_LDFLAGS): add -no-undefined
	which is necessary for building shared library on some platforms
	(e.g. Win32, BeOS).

	* libgnome/libgnome-2.0.pc.in (Libs): add -lpopt.

	* help-converters/gnome-vfs-module/Makefile.am:
	(module_flags): add -module and -no-undefined.
	(libvfs_help_la_LIBADD): add $(top_builddir)/libgnome/libgnome-2.la.

	* help-converters/gnome-vfs-module/help-methods.conf.in: remove "lib"
	prefix and ".so" suffix from module names. Because these are added
	automatically by g_module_build_path(), and they breaks on Cygwin.
	Cygwin uses "cyg" and ".dll" respectively.

	* monikers/GNOME_Moniker_std.server.in.in: remove ".so" from module
	name.

	* monikers/Makefile.am (libmoniker_extra_2_la_LDFLAGS): add
	-no-undefined.
