@@ -25,3 +25,4 @@ gnome-marshal.h
 Gnome.h
 *-imodule.c
 test-sound
+gnome-open
