@@ -6,6 +6,8 @@
 
 lib_LTLIBRARIES = libgnome-2.la
 
+bin_PROGRAMS = gnome-open
+
 LINK = $(LIBTOOL) --mode=link $(CC) $(CFLAGS) $(LDFLAGS) -o $@
 
 libgnomeincludedir = $(includedir)/libgnome-2.0/libgnome
@@ -68,6 +70,12 @@ $(libgnome_2_la_OBJECTS):	  \
 libgnomeinclude_HEADERS = \
 	libgnometypebuiltins.h	\
 	$(libgnome_headers)
+
+gnome_open_SOURCES = \
+	gnome-open.c
+
+gnome_open_LDADD = \
+	libgnome-2.la
 
 # all autogenerated files need to be generated in the srcdir,
 # so old versions get remade and are not confused with newer
