@@ -8,6 +8,7 @@ libgnome/gnome-i18n.c
 libgnome/gnome-init.c
 libgnome/gnome-program.c
 libgnome/gnome-url.c
+libgnome/gnome-open.c
 monikers/GNOME_Moniker_std.server.in.in
 monikers/bonobo-config-bag.c
 monikers/bonobo-moniker-conf-indirect.c
