@@ -1,3 +1,8 @@
+2003-06-23  Anders Carlsson  <andersca@codefactory.se>
+
+	* POTFILES.in:
+	Add gnome-open.c
+	
 2003-06-22  Metin Amiroff <metin@karegen.com>
 
 	* az.po: Updated Azerbaijani translation.
