@@ -1,3 +1,10 @@
+2003-06-23  Anders Carlsson  <andersca@codefactory.se>
+
+	* libgnome/.cvsignore:
+	* libgnome/Makefile.am:
+	* libgnome/gnome-open.c: (main):
+	Add gnome-open.
+	
 Tue Jun 10 12:51:27 2003  Jonathan Blandford  <jrb@redhat.com>
 
 	* schemas/desktop_gnome_accessibility_startup.schemas.in: Patch
